--- a/Pages/Recipes/Edit.cshtml
+++ b/Pages/Recipes/Edit.cshtml
@@ -35,7 +35,21 @@
                 <input asp-for="Recipe.Description" class="form-control" />
                 <span asp-validation-for="Recipe.Description" class="text-danger"></span>
             </div>
-           
+            <div class="form-group">
+                <label asp-for="Recipe.Images" class="control-label">1</label>
+                <input asp-for="Img_1" class="form-control" />
+                
+            </div>
+            <div class="form-group">
+                <label asp-for="Recipe.Images" class="control-label">2</label>
+                <input asp-for="Img_2" class="form-control" />
+               
+            </div>
+            <div class="form-group">
+                <label asp-for="Recipe.Images" class="control-label">3</label>
+                <input asp-for="Img_3" class="form-control" />
+               
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
